# concatenate-all-files

./: Cargo.toml  README.md  output.txt
src/: main.rs
