[package]
name = "concatenate-all-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
chardetng = "0.1.17"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
infer = "0.13.0"
mime_guess = "2.0.4"
